[tool.poetry]
name = "concourse-ramp-tower"
version = "0"
description = "Synchronize Concourse worker state with AWS auto scaling groups"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
forcediphttpsadapter = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
boto3 = "^1.17.69"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-json = "*"
mypy = "*"
pylint = "*"
types-requests = "^2.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.pylint.basic]
disable = ["line-too-long,logging-fstring-interpolation,unused-variable,wrong-import-order"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120
good-names = "e"

[tool.pylint.variables]
allow-global-unused-variables = false
